# samasya

./: .gitignore  Dockerfile  Makefile  Procfile  Procfile.dev  Procfile.prod  README.md  development.config.yaml  next.config.js  package-lock.json  package.json  production.config.yaml  test.config.yaml
.github/: dependabot.yml
api/: Cargo.toml  Makefile
api/migrations/: 20230513205412_init.sql  20230514150322_add-problems.sql  20230526193511_add-problem-skills.sql  20230529002438_add-problem-approaches.sql  20240825040820_add-prereq-problems.sql  20240825143407_update-prereq-problems.sql  20240825201852_update-skills.sql  20240831230748_add-problem-to-prereq-skills.sql  20240901002032_add-approach-to-answers.sql  20240901003429_add-approach-to-queues.sql  20240901043527_add-added-at-to-prereq-skills.sql  20240901051110_add-consecutive-correct.sql
api/src/: app.rs  approaches.rs  lib.rs  problems.rs  queues.rs  search.rs  skills.rs  tasks.rs  types.rs
api/src/fixtures/: seeds.sql  simple.sql
api/src/queues/: chooser.rs
api/src/sqlx/: approaches.rs  mod.rs  problems.rs  queues.rs  tasks.rs
backend/: Cargo.toml  Makefile  Shuttle.toml
backend/migrations/: 20230513205412_init.sql  20230528185942_add-prerequisite-problems.sql  20230603202029_add-problem-queues.sql
backend/src/: types.rs
backend/src/sqlx/: approaches.rs  mod.rs  problems.rs  queues.rs
client/: .eslintrc.json  Makefile  cypress.config.ts  next.config.js  next.config.mjs  package.json  postcss.config.cjs  tsconfig.json
client/cypress/e2e/: skills.cy.ts
client/src/: constants.ts  helpers.ts  types.ts
client/src/app/: global.css  handleResponse.ts  layout.tsx  page.tsx
client/src/app/content/: page.tsx
client/src/app/learning/: page.tsx
client/src/app/search/: page.module.css  page.tsx
client/src/components/AddPrereqTask/: index.tsx
client/src/services/: approaches.ts  problems.ts  queues.ts  search.ts  skills.ts  tasks.ts
data/: fixtures.sql
frontend/: .eslintrc.json  Makefile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/cypress/e2e/: landing.cy.ts  skills.cy.ts
frontend/src/: constants.ts  types.ts
frontend/src/app/: globals.css  layout.module.css  layout.tsx  page.tsx
frontend/src/app/learning/: page.tsx
frontend/src/services/: problems.ts  queues.ts  skills.ts
pages/: index.tsx
scripts/: e2e
(+86 files in other folders)
