[package]
name = "samasya"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "backend"
path = "src/bin/backend.rs"

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.31"
color-eyre = "0.6.2"
dotenv = "0.15.0"
envy = "0.4.2"
hyper = { version = "0.14.27", features = ["http2"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }
sqlx-cli = "0.6.3"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
